--- a/AddPatient.html
+++ b/AddPatient.html
@@ -80,7 +80,7 @@ position:fixed;">
         background-color:white;">
 
 
-        <form method = "post" action = "Add patient.php">
+        <form method = "post" action = "addpatient.php">
 
 <div style = " display:grid;
 margin-top:40px;
